[gd_scene load_steps=16 format=2]

[ext_resource path="res://guns/Repeater.tscn" type="PackedScene" id=1]
[ext_resource path="res://guns/RayGun.tscn" type="PackedScene" id=2]
[ext_resource path="res://guns/DivideZero.tscn" type="PackedScene" id=3]
[ext_resource path="res://guns/Complex.tscn" type="PackedScene" id=4]
[ext_resource path="res://guns/Quadratic.tscn" type="PackedScene" id=5]
[ext_resource path="res://player/number_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://font/alphbeta.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://font/romulus.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://player/Player.gd" type="Script" id=9]
[ext_resource path="res://guns/Decimal.tscn" type="PackedScene" id=10]
[ext_resource path="res://player/Number.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 8 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 6.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 12.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 17
script = ExtResource( 9 )

[node name="Legs" type="Node2D" parent="."]
position = Vector2( 0, -31 )

[node name="Label" type="Label" parent="Legs"]
margin_left = -33.5546
margin_top = 6.68199
margin_right = 36.4454
margin_bottom = 36.682
rect_min_size = Vector2( 70, 30 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0.517647, 0.827451, 1 )
text = "/ \\"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="Node2D" parent="."]

[node name="NumberBack" type="Node2D" parent="Body"]
script = ExtResource( 11 )
color = Color( 0, 0.231373, 0.313726, 1 )

[node name="NumberFore" type="Node2D" parent="Body"]
script = ExtResource( 11 )
color = Color( 0, 1, 1, 1 )
draw_width = 1.0

[node name="Number" type="Label" parent="Body"]
visible = false
margin_left = -75.0
margin_top = -55.0
margin_right = 75.0
margin_bottom = -5.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0.341176, 0.776471, 1 )
text = "800"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hat" type="Label" parent="Body"]
margin_left = -50.0
margin_top = -47.0
margin_right = -20.0
margin_bottom = 3.0
rect_min_size = Vector2( 30, 50 )
rect_rotation = -90.0
rect_scale = Vector2( 1, 2 )
custom_fonts/font = SubResource( 3 )
text = ">"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GunAttach" type="Position2D" parent="."]
position = Vector2( 0, -17.817 )

[node name="Decimal" parent="GunAttach" instance=ExtResource( 10 )]

[node name="Repeater" parent="GunAttach" instance=ExtResource( 1 )]
visible = false

[node name="Quadratic" parent="GunAttach" instance=ExtResource( 5 )]
visible = false

[node name="DivideZero" parent="GunAttach" instance=ExtResource( 3 )]
visible = false

[node name="RayGun" parent="GunAttach" instance=ExtResource( 2 )]
visible = false

[node name="Complex" parent="GunAttach" instance=ExtResource( 4 )]
visible = false

[node name="WalkAnimTimer" type="Timer" parent="."]
wait_time = 0.15
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -16, -16 )
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( 16, -16 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, -32 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -60
limit_top = -3001
limit_bottom = 60

[node name="GroundFinder" type="Node2D" parent="."]
position = Vector2( 0, -30 )

[node name="RayCast2D" type="RayCast2D" parent="GroundFinder"]
enabled = true

[node name="RayCast2D4" type="RayCast2D" parent="GroundFinder"]
position = Vector2( -11, 0 )
enabled = true

[node name="RayCast2D5" type="RayCast2D" parent="GroundFinder"]
position = Vector2( 11, 0 )
enabled = true

[node name="RayCast2D2" type="RayCast2D" parent="GroundFinder"]
position = Vector2( -22, 0 )
enabled = true

[node name="RayCast2D3" type="RayCast2D" parent="GroundFinder"]
position = Vector2( 22, 0 )
enabled = true

[connection signal="timeout" from="WalkAnimTimer" to="." method="_on_WalkAnimTimer_timeout"]
